--- a/src/main/resources/templates/admin-manage.html
+++ b/src/main/resources/templates/admin-manage.html
@@ -92,7 +92,7 @@
             <div class="bg-white p-2">
                 <p class="d-flex mt-2 align-items-center">
                     <span class="d-none d-sm-inline">
-                        <img src="/image/Gach_homepage_main.png.png" class="img-fluid">
+                        <img src="/image/Gach_homepage_main.png" class="img-fluid">
                     </span>
                 </p>
                 <ul class="nav flex-column mt-4">
@@ -172,7 +172,6 @@
                         관리자 설정
                     </div>
                     <div class="col align-items-end text-end">
-                        <img src="/image/nmj.JPG" class="rounded-circle mb-3 mx-3" style="width:40px">
                         <b class="noto-sans-sidebar py-5 my-5" style="font-size:1.5rem;">노명준</b>
                     </div>
                 </div>
@@ -198,6 +197,7 @@
                                             <th scope="col">이름</th>
                                             <th scope="col">생년월일</th>
                                             <th scope="col">권한</th>
+                                            <th scope="col">상세보기</th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -207,15 +207,25 @@
                                             <td th:text="${admin.getAdminName()}">@mdo</td>
                                             <td th:text="${admin.getAdminBirthday()}">@mdo</td>
                                             <td th:text="${admin.getAdminAuthorization()}">Otto</td>
+                                            <td class="text-center pe-5">
+                                                <a th:href="@{'/admin/'+${admin.getAdminId()}}" >
+                                                    <i class = "bi bi-info-circle"></i>
+                                                </a>
+                                            </td>
                                         </tr>
-                                        <tr th:each="guest : ${guestList}">
-                                            <th scope="row" th:text="${guest.getAdminNum()}">1</th>
-                                            <td th:text="${guest.getName()}">Mark</td>
-                                            <td th:text="${guest.getAdminId()}">Mark</td>
-                                            <td th:text="${guest.getAdminName()}">@mdo</td>
-                                            <td th:text="${guest.getAdminBirthday()}">@mdo</td>
-                                            <td th:text="${guest.getAdminAuthorization()}">Otto</td>
-
+                                        </tbody>
+                                        <tbody>
+                                        <tr th:each="admin : ${guestList}">
+                                            <th scope="row" th:text="${admin.getAdminNum()}">1</th>
+                                            <td th:text="${admin.getAdminId()}">Mark</td>
+                                            <td th:text="${admin.getAdminName()}">@mdo</td>
+                                            <td th:text="${admin.getAdminBirthday()}">@mdo</td>
+                                            <td th:text="${admin.getAdminAuthorization()}">Otto</td>
+                                            <td class="text-center pe-5">
+                                                <a th:href="@{'/admin/'+${admin.getAdminId()}}" >
+                                                    <i class = "bi bi-info-circle"></i>
+                                                </a>
+                                            </td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -241,14 +251,24 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <tr th:each="admin : ${adminList}">
-                                                <th scope="row" th:text="${admin.getAdminId()}">1</th>
-                                                <td th:text="${admin.getAdminNum()}">Mark</td>
-                                                <td th:text="${admin.getAdminName()}">@mdo</td>
-                                                <td th:text="${admin.getAdminBirthday()}">@mdo</td>
-                                                <td th:text="${admin.getAdminAuthorization()}">Otto</td>
-                                                <td><i class="bi bi-check-square"></i></td>
-                                                <td><i class="bi bi-x-square"></i></td>
+                                            <tr th:each=" waiter : ${waiterList}">
+                                                <td th:text="${waiter.getAdminNum()}">Otto</td>
+                                                <td th:text="${waiter.getAdminId()}">ID</td>
+                                                <td th:text="${waiter.getAdminName()}">Mark</td>
+                                                <td th:text="${waiter.getAdminBirthday()}">@mdo</td>
+                                                <td th:text="${waiter.getAdminAuthorization()}">@mdo</td>
+                                                <td>
+                                                    <a th:href="@{'/admin/approve/'+${waiter.getAdminNum()}}">
+                                                        <i class="bi bi-check-square"></i>
+                                                        <!--  권한을 수락하는 API -->
+                                                    </a>
+                                                </td>
+                                                <td>
+                                                    <a th:href="@{'/admin/delete/'+${waiter.getAdminNum()}}">
+                                                        <i class="bi bi-x-square"></i>
+                                                        <!-- 권한을 거부하는 API -->
+                                                    </a>
+                                                </td>
                                             </tr>
                                             </tbody>
                                         </table>
