--- a/src/main/resources/templates/dashboard-guest.html
+++ b/src/main/resources/templates/dashboard-guest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>대시보드 게스트</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,6 +43,12 @@
             font-weight: 200;
             font-style: normal;
         }
+        .noto-sans-300 {
+            font-family: "Noto Sans KR", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 300;
+            font-style: normal;
+        }
         .noto-sans-400 {
             font-family: "Noto Sans KR", sans-serif;
             font-optical-sizing: auto;
@@ -55,63 +61,21 @@
         .green-color {
             color: rgb(46, 189, 143);
         }
-        .nanum-gothic-regular {
-            font-family: "Nanum Gothic", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-        }
-        .nanum-gothic-Bold {
-            font-family: "Nanum Gothic", sans-serif;
-            font-weight: 700;
-            font-style: normal;
-        }
-        .ubuntu-light {
-            font-family: "Ubuntu", sans-serif;
-            font-weight: 300;
-            font-style: normal;
-        }
-
-        .ubuntu-regular {
-            font-family: "Ubuntu", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-        }
-
-        .ubuntu-medium {
-            font-family: "Ubuntu", sans-serif;
-            font-weight: 500;
-            font-style: normal;
-        }
-        .btn-toggle::before {
-            width: 1.25em;
-            line-height: 0;
-            content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-            transition: transform .35s ease;
-            transform-origin: .5em 50%;
-        }
         [data-bs-theme="dark"] .btn-toggle::before {
             content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%28255,255,255,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-        }
-        .btn-toggle[aria-expanded="true"]::before {
-            transform: rotate(90deg);
         }
         .btn-toggle-nav a {
             padding: .1875rem .5rem;
             margin-top: .125rem;
             margin-left: 1.25rem;
         }
-        .scrollarea {
-            overflow-y: auto;
+        a{
+            color : #535353;
+            text-decoration: none;
         }
-        .additional-options {
-            display: none;
-            transition: max-height 2s ease-out;
-            overflow: hidden;
-            max-height: 0;
-        }
-        .additional-options.show {
-            display: block;
-            max-height: 100px; /* 변경할 수 있는 최대 높이 */
+        a:hover{
+            color : black;
+            transition : color 1.5s;
         }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -119,78 +83,122 @@
 <body>
 <div class="container-fluid">
     <div class="row flex-nowrap">
-        <div class="bg-white col-auto col-md-2" style="max-width: 250px;">
-            <div class="bg-white p-2">
-                <p class="d-flex mt-2 align-items-center">
-                    <span class="d-none d-sm-inline">
-                        <img src="/image/Gach_homepage_main.png.png" class="img-fluid">
-                    </span>
-                </p>
-                <ul class="nav flex-column mt-4">
-                    <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary">
-                            <img src="/image/squares.leading.rectangle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">대시보드</span>
-                        </a>
-                    </li>
-                    <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary">
-                            <img src="/image/arrow.triangle.branch.png" class="img-fluid mb-2">
-                            <span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">경로 관리</span>
-                            <img src="/image/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
-                        </a>
-                        <ul id="additionalOptions" class="additional-options nav nav-pills flex-column">
-                            <li class="nav-item mt-1 nav-link">
-                                <img src="/image/dot.viewfinder.png" class="img-fluid mb-1">
-                                <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
-                            </li>
-                            <li class="nav-item mt-1 nav-link">
-                                <img src="/image/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
-                                <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
-                            </li>
-                            <li class="nav-item mt-1 nav-link">
-                                <img src="/image/map.png" class="img-fluid mb-1">
-                                <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none">경로 테스트</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary">
-                            <img src="/image/brain.head.profile.png" class="img-fluid mb-2 me-4">
-                            <span class="fs-5 d-none d-sm-inline noto-sans-sidebar">AI 관리</span>
-                        </a>
-                    </li>
-                    <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary">
-                            <img src="/image/building.2.png" class="img-fluid mb-2 me-1"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">장소 관리</span>
-                        </a>
-                    </li>
-                    <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary">
-                            <img src="/image/calendar.badge.plus.png" class="img-fluid mb-2"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">행사 관리</span>
-                        </a>
-                    </li>
-                    <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary ps-2">
-                            <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
-                        </a>
-                    </li>
-                    <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary">
-                            <img src="/image/person.fill.questionmark.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">문의 관리</span>
-                        </a>
-                    </li>
-                    <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary">
-                            <img src="/image/exclamationmark.circle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">로그</span>
-                        </a>
-                    </li>
-                    <li class="nav-item mt-2">
-                        <a href="#" class="nav-link text-body-secondary ps-2">
-                            <img src="/image/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+        <div class="bg-white col-auto col-md-2 text-start sidebar noto-sans-300" style="max-width: 15vw;">
+            <a href="/admin/test">
+                <div class="row">
+                    <div class="col mt-2">
+                        <img src="/image/Gach_homepage_main.png" class="img-fluid">
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-4 ms-2 ps-5 text-center">
+                        <i class="bi bi-clipboard-data fs-3"></i>
+                    </div>
+                    <div class="col-6 me-3 pe-3 mt-1 fs-4 text-start">
+                        대시보드
+                    </div>
+                </div>
+            </a>
+            <a href="/admin/node">
+                <div class="row mt-4">
+                    <div class="col-4 ms-2 ps-5 text-center">
+                        <i class="bi bi-diagram-3 fs-3"></i>
+                    </div>
+                    <div class="col-6 me-3 pe-3 mt-1 fs-4 text-start">
+                        노드관리
+                    </div>
+                </div>
+            </a>
+            <a href="/admin/line">
+                <div class="row mt-4">
+                    <div class="col-4 ms-2 ps-5 text-center">
+                        <i class="bi bi-sign-turn-right fs-3"></i>
+                    </div>
+                    <div class="col-6 me-3 pe-3 mt-1 fs-4 text-start">
+                        경로관리
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="row mt-4">
+                    <div class="col-4 ms-2 ps-5 text-center">
+                        <i class="bi bi-compass fs-3"></i>
+                    </div>
+                    <div class="col-6 me-3 pe-3 mt-1 fs-4 text-start">
+                        경로 테스트
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="row mt-4">
+                    <div class="col-4 ms-2 ps-5 text-center">
+                        <i class="bi bi-cpu fs-3"></i>
+                    </div>
+                    <div class="col-6 me-3 pe-3 mt-1 fs-4 text-start">
+                        AI 관리
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="row mt-4">
+                    <div class="col-4 ms-1 ps-5 text-center">
+                        <i class="bi bi-calendar fs-3"></i>
+                    </div>
+                    <div class="col-6 me-3 pe-2 mt-1 fs-4 text-start">
+                        행사 관리
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="row mt-4">
+                    <div class="col-4 ms-1 ps-5 text-center">
+                        <i class="bi bi-building fs-3"></i>
+                    </div>
+                    <div class="col-6 me-3 pe-2 mt-2 fs-4 text-start">
+                        장소 관리
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="row mt-4">
+                    <div class="col-4 ms-1 ps-5 text-center">
+                        <i class="bi bi-person-square fs-3"></i>
+                    </div>
+                    <div class="col-6 me-3 mt-1 fs-4 text-start">
+                        사용자 관리
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="row mt-4">
+                    <div class="col-4 ms-1 ps-5 text-center">
+                        <i class="bi bi-question-square fs-3"></i>
+                    </div>
+                    <div class="col-6 me-3 mt-1 fs-4 text-start">
+                        문의 관리
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="row mt-4">
+                    <div class="col-4 ms-1 ps-5 text-center">
+                        <i class="bi bi-archive fs-3"></i>
+                    </div>
+                    <div class="col-6 me-3 mt-1 fs-4 text-start">
+                        로그 관리
+                    </div>
+                </div>
+            </a>
+            <a href="/admin">
+                <div class="row mt-4">
+                    <div class="col-4 ms-1 ps-5 text-center">
+                        <i class="bi bi-person-vcard fs-3"></i>
+                    </div>
+                    <div class="col-6 me-3 mt-1 fs-4 text-start">
+                        관리자 설정
+                    </div>
+                </div>
+            </a>
         </div>
 
         <!-- Content -->
@@ -205,7 +213,6 @@
                         Dashboard
                     </div>
                     <div class="col align-items-end text-end">
-                        <img src="/image/nmj.JPG" class="rounded-circle mb-3 mx-3" style="width:40px">
                         <b class="noto-sans-sidebar py-5 my-5" style="font-size:1.5rem;">노명준</b>
                     </div>
                 </div>
