--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -119,11 +119,11 @@
 <body>
 <div class="container-fluid">
     <div class="row flex-nowrap">
-        <div class="bg-white col-auto col-md-2" style="max-width: 250px;">
+        <div class="bg-white col-auto col-md-2" style="max-width: 13vw;">
             <div class="bg-white p-2">
                 <p class="d-flex mt-2 align-items-center">
                     <span class="d-none d-sm-inline">
-                        <img src="/image/Gach_homepage_main.png.png" class="img-fluid">
+                        <img src="/image/Gach_homepage_main.png" class="img-fluid">
                     </span>
                 </p>
                 <ul class="nav flex-column mt-4">
@@ -205,7 +205,6 @@
                         Dashboard
                     </div>
                     <div class="col align-items-end text-end">
-                        <img src="/image/nmj.JPG" class="rounded-circle mb-3 mx-3" style="width:40px">
                         <b class="noto-sans-sidebar py-5 my-5" style="font-size:1.5rem;">노명준</b>
                     </div>
                 </div>
