--- a/src/main/resources/templates/line-add.html
+++ b/src/main/resources/templates/line-add.html
@@ -23,7 +23,7 @@
         <div class="bg-white p-2">
             <p class="d-flex mt-2 align-items-center">
                     <span class="d-none d-sm-inline">
-                        <img src="/image/Gach_homepage_main.png.png" class="img-fluid">
+                        <img src="/image/Gach_homepage_main.png" class="img-fluid">
                     </span>
             </p>
             <ul class="nav flex-column mt-4">
@@ -100,10 +100,9 @@
 
             <div class="row">
                 <div class="col align-items-start ubuntu-medium fs-2">
-                    노드 관리
+                    간선 관리
                 </div>
                 <div class="col align-items-end text-end">
-                    <img src="/image/nmj.JPG" class="rounded-circle mb-3 mx-3" style="width:40px">
                     <b class="noto-sans-sidebar py-5 my-5" style="font-size:1.5rem;">노명준</b>
                 </div>
             </div>
@@ -114,48 +113,58 @@
                 <div class="col px-5 py-1">
                     <div class="card border-light px-5 py-1" style="max-height: 85vh">
                         <div class="shadow p-3 rounded border-bottom border-4 border-primary-subtle">
-                            <div class="row">
-                                <div class="col">
-                                    <span class="noto-sans-700 fs-3">간선 추가</span>
-                                </div>
-                                <div class="col text-end">
-                                    <button type="button" class="btn btn-outline-primary">추가</button>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <div class="row mt-4">
-                                        <div class="input-group mb-3">
-                                            <span class="input-group-text">&nbsp;이름&nbsp;</span>
-                                            <input type="text" class="form-control">
-                                        </div>
+                            <form th:object="${lineDto}" th:action="@{/admin/line}" method="post">
+                                <div class="row">
+                                    <div class="col">
+                                        <span class="noto-sans-700 fs-3">간선 추가</span>
                                     </div>
-                                    <div class="row mt-4">
-                                        <div class="col">
-                                            <div class="input-group mb-3">
-                                                <label class="input-group-text" for="inputGroupSelect01">노드1</label>
-                                                <select class="form-select" id="inputGroupSelect01">
-                                                    <option selected>Choose...</option>
-                                                    <option value="1">One</option>
-                                                    <option value="2">Two</option>
-                                                    <option value="3">Three</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="input-group mb-3">
-                                                <label class="input-group-text" for="inputGroupSelect02">노드2</label>
-                                                <select class="form-select" id="inputGroupSelect02">
-                                                    <option selected>Choose...</option>
-                                                    <option value="1">One</option>
-                                                    <option value="2">Two</option>
-                                                    <option value="3">Three</option>
-                                                </select>
-                                            </div>
-                                        </div>
+                                    <div class="col text-end">
+                                        <button type="submit" class="btn btn-outline-primary">추가</button>
                                     </div>
                                 </div>
-                            </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="row mt-4">
+                                            <div class="input-group mb-3">
+                                                <span class="input-group-text">&nbsp;이름&nbsp;</span>
+                                                <input type="text" class="form-control" th:field="*{lineName}"
+                                                       th:classappend="${#fields.hasErrors('lineName')} or ${nameMessage} == '이미 존재하는 이름입니다.' ? 'border border-danger' : ''">
+                                            </div>
+                                            <div th:if="${#fields.hasErrors('lineName')}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                                <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:errors="*{lineName}">아이디 오류</span>
+                                            </div>
+                                        </div>
+                                        <div class="row mt-4">
+                                            <div class="col">
+                                                <div class="input-group mb-3">
+                                                    <label class="input-group-text" for="inputGroupSelect01">노드1</label>
+                                                    <select class="form-select" id="inputGroupSelect01" th:field="*{nodeNameFirst}"
+                                                            th:classappend="${#fields.hasErrors('nodeNameFirst')} or ${nameMessage} == '이미 존재하는 경로입니다.' ? 'border border-danger' : ''">
+                                                        <option value="" selected>노드 선택</option>
+                                                        <option th:each="node : ${nodeList}" th:value="${node.getName()}" th:text="${node.getName()}">One</option>
+                                                    </select>
+                                                </div>
+                                                <div th:if="${#fields.hasErrors('nodeNameFirst')}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                                    <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:errors="*{nodeNameFirst}">아이디 오류</span>
+                                                </div>
+                                            </div>
+                                            <div class="col">
+                                                <div class="input-group mb-3">
+                                                    <label class="input-group-text" for="inputGroupSelect02">노드2</label>
+                                                    <select class="form-select" id="inputGroupSelect02" th:field="*{nodeNameSecond}"
+                                                            th:classappend="${#fields.hasErrors('nodeNameSecond')} or ${pathMessage} == '같은 경로를 지정하셨습니다.' ? 'border border-danger' : ''">
+                                                        <option value="" selected>노드 선택</option>
+                                                        <option th:each="node : ${nodeList}" th:value="${node.getName()}" th:text="${node.getName()}">One</option>
+                                                    </select>
+                                                </div>
+                                                <div th:if="${#fields.hasErrors('nodeNameSecond')}" class="text-start ms-2 text-danger" style="font-size:80%">
+                                                    <i class="bi bi-exclamation-circle"></i><span class="ps-1 pt-1" th:errors="*{nodeNameSecond}">아이디 오류</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
