--- a/src/main/resources/templates/user-detail.html
+++ b/src/main/resources/templates/user-detail.html
@@ -24,7 +24,7 @@
         <div class="bg-white p-2">
             <p class="d-flex mt-2 align-items-center">
                     <span class="d-none d-sm-inline">
-                        <img src="/image/Gach_homepage_main.png.png" class="img-fluid">
+                        <img src="/image/Gach_homepage_main.png" class="img-fluid">
                     </span>
             </p>
             <ul class="nav flex-column mt-4">
@@ -104,7 +104,6 @@
                     사용자 관리
                 </div>
                 <div class="col align-items-end text-end">
-                    <img src="/image/nmj.JPG" class="rounded-circle mb-3 mx-3" style="width:40px">
                     <b class="noto-sans-sidebar py-5 my-5" style="font-size:1.5rem;">노명준</b>
                 </div>
             </div>
@@ -115,87 +114,89 @@
                 <div class="col px-5 py-1">
                     <div class="card border-light px-5 py-1" style="max-height: 85vh">
                         <div class="shadow p-3 rounded border-bottom border-4 border-primary-subtle">
-                            <div class="row">
-                                <div class="col">
-                                    <span class="noto-sans-700 fs-3">사용자 상세 정보</span>
-                                </div>
-                                <div class="col text-end">
-                                    <button type="button" class="btn btn-outline-success">수정</button>
-                                    <button type="button" class="btn btn-outline-danger">삭제</button>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <div class="row mt-4">
-                                        <div class="col-6">
-                                            <div class="input-group mb-3">
-                                                <span class="input-group-text">&nbsp;아이디&nbsp;</span>
-                                                <input type="text" class="form-control">
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="input-group mb-3">
-                                                <span class="input-group-text">&nbsp;성별&nbsp;</span>
-                                                <input type="text" class="form-control">
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="input-group mb-3">
-                                                <span class="input-group-text">&nbsp;속도&nbsp;</span>
-                                                <input type="text" class="form-control">
-                                            </div>
-                                        </div>
+                            <form th:object="${user}" th:action="@{/admin/user}" method="post">
+                                <div class="row">
+                                    <div class="col">
+                                        <span class="noto-sans-700 fs-3">사용자 상세 정보</span>
                                     </div>
-                                    <div class="row mt-4">
-                                        <div class="col">
-                                            <div class="input-group mb-3">
-                                                <span class="input-group-text">&nbsp;닉네임&nbsp;</span>
-                                                <input type="text" class="form-control">
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="input-group mb-3">
-                                                <span class="input-group-text">출생년도</span>
-                                                <input type="text" class="form-control">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row mt-4">
-                                        <div class="col-6">
-                                            <div class="input-group mb-3">
-                                                <span class="input-group-text">&nbsp;학과&nbsp;</span>
-                                                <input type="text" class="form-control">
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="input-group mb-3">
-                                                <span class="input-group-text">&nbsp;키&nbsp;</span>
-                                                <input type="text" class="form-control">
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="input-group mb-3">
-                                                <span class="input-group-text">&nbsp;몸무게&nbsp;</span>
-                                                <input type="text" class="form-control">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row mt-4">
-                                        <div class="col">
-                                            <div class="input-group mb-3">
-                                                <span class="input-group-text">&nbsp;추천 경로 만족도&nbsp;</span>
-                                                <input type="text" class="form-control">
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="input-group mb-3">
-                                                <span class="input-group-text">&nbsp;소요시간 예측 만족도&nbsp;</span>
-                                                <input type="text" class="form-control">
-                                            </div>
-                                        </div>
+                                    <div class="col text-end">
+                                        <button type="submit" class="btn btn-outline-success">수정</button>
+                                        <a th:href="@{'/admin/user/delete'+${user.getUserId()}}" class="btn btn-outline-danger">삭제</a>
                                     </div>
                                 </div>
-                            </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="row mt-4">
+                                            <div class="col-6">
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text">&nbsp;아이디&nbsp;</span>
+                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                </div>
+                                            </div>
+                                            <div class="col">
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text">&nbsp;성별&nbsp;</span>
+                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                </div>
+                                            </div>
+                                            <div class="col">
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text">&nbsp;속도&nbsp;</span>
+                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row mt-4">
+                                            <div class="col">
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text">&nbsp;닉네임&nbsp;</span>
+                                                    <input type="text" class="form-control" th:field="*{}">
+                                                </div>
+                                            </div>
+                                            <div class="col">
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text">출생년도</span>
+                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row mt-4">
+                                            <div class="col-6">
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text">&nbsp;학과&nbsp;</span>
+                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                </div>
+                                            </div>
+                                            <div class="col">
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text">&nbsp;키&nbsp;</span>
+                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                </div>
+                                            </div>
+                                            <div class="col">
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text">&nbsp;몸무게&nbsp;</span>
+                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row mt-4">
+                                            <div class="col">
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text">&nbsp;추천 경로 만족도&nbsp;</span>
+                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                </div>
+                                            </div>
+                                            <div class="col">
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text">&nbsp;소요시간 예측 만족도&nbsp;</span>
+                                                    <input type="text" class="form-control" th:value="${}" th:text="${}">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
